--- a/styles.css
+++ b/styles.css
@@ -21,14 +21,23 @@ body{
 header{
     width: 85%;
     height: 95%;
-    border: 1px solid white;
+    /* border: 1px solid white; */
     display: flex;
     flex-wrap: wrap;
     overflow: hidden;
 }
+header .menu_side{
+    position: relative;
+    width: 25%;
+    height: 80%;
+    /* border: 1px solid white; */
+    background-color: #111727;
+    box-shadow: 5px 0px 2px #090f1f;
+    color: white;
+}
 
 
-header .menu_side, .song_side{
+header .menu_side,  .song_side{
     position: relative;
     width: 25%;
     height: 100%;
@@ -91,7 +100,7 @@ header .menu_side .playlist h4 span:before{
     transition: .3s linear;
 }
 header .menu_side .playlist h4:hover span:before{
-    border: 2px solid #fff;
+    /* border: 2px solid #fff; */
 }
 header .menu_side .playlist h4 .bi{
     display: none;
@@ -109,7 +118,7 @@ header .menu_side .playlist .active .bi{
 
 header .menu_side .menu_song{
     width: 100%;
-    height: 300px;
+    height: 320px;
     /* border: 1px solid #fff; */
     margin-top: 40px;
 }
@@ -163,7 +172,7 @@ header .master_play{
     padding: 0px 20px;
     margin-top: 20px;
     width: 100%;
-    border: 1px solid white;
+    /* border: 1px solid white; */
     
    
 
@@ -239,8 +248,8 @@ header .master_play h5 .subtitle{
 header .master_play .icon{
     font-size: 20px;
     color: #fff;
-    width: 100px;
-    /* margin: 0px 20px 0px 40px; */
+    width: 120px;
+    margin: 0px 20px 0px 40px;
 }
 header .master_play .icon .bi{
    cursor: pointer;
